# librealsense-docker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  create_builds.py  create_manifests.py
example/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
example/src/: main.cpp
